gui/css/bootstrap.automad.*: Fixed double borders in button groups

--- a/www/automad/gui/css/bootstrap.automad.less
+++ b/www/automad/gui/css/bootstrap.automad.less
@@ -427,9 +427,19 @@ label {
 // Buttons
 // =============================
 
-.btn-group > .btn:hover {
-	z-index: 0;
-}
+.btn-group > .btn {
+	
+	border-left-width: 0px;
+	
+	&:first-child {
+		border-left-width: 1px;
+	}
+	
+	&:hover {
+		z-index: 0;
+	}
+	
+} 
 
 .btn,
 .btn.disabled,
